<resources>
    <string name="app_name">Suitmedia Test</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">CHECK</string>
    <string name="next">NEXT</string>
    <string name="second_screen">Second Screen</string>
    <string name="welcome">Welcome</string>
    <string name="username">username</string>
    <string name="selectUsername">Selected User Name</string>
    <string name="chooseUser">Choose a User</string>
    <string name="btnBack">Button Kembali</string>
    <string name="third_screen">Third Screen</string>
    <string name="img_user">img user</string>
    <string name="email">email@gmail.com</string>

</resources>